--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,7 +12,7 @@ application.secret="5Vly70DvycJPq=MhprbDsU7/owIQX3jsPeB1PS6oHnhxWLfThyTWStmZQPAR
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="en,ru"
 
 # Global object class
 # ~~~~~
@@ -40,6 +40,10 @@ application.langs="en"
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost:3307/blog"
+db.default.user=monty
+db.default.pass="some_pass"
 
 # Evolutions
 # ~~~~~
